--- a/SimaStarWars.html
+++ b/SimaStarWars.html
@@ -23,6 +23,17 @@
 
         </div>
     </nav>
+    <nav>
+        <div class="Departamentos"></div>
+        <ul>
+            <li>Departamentos</li>
+            <li>Servicios</li>
+            <li>Rebajas</li>
+            <li>Exclusivo online</li>
+            <li>Tecnología</li>
+
+        </ul>
+    </nav>
 
 </body>
 
