--- a/SimaStarWars.html
+++ b/SimaStarWars.html
@@ -18,22 +18,30 @@
         <div class="Barra-busqueda">
             <img src="IMG/Siman-rombo-logo.png" alt="Siman Rombo" class="Logo-siman">
             <h2>SIMAN.COM</h2>
-            <input type="text" placeholder="Buscar"/>
+            <input type="text" placeholder="Buscar" />
             <button type="submit">🔍</button>
 
         </div>
     </nav>
     <nav>
-        <div class="Departamentos"></div>
         <ul>
             <li>Departamentos</li>
             <li>Servicios</li>
             <li>Rebajas</li>
             <li>Exclusivo online</li>
             <li>Tecnología</li>
-
+            <li>Zapatos</li>
+            <li>Celulares</li>
+            <li>Belleza</li>
         </ul>
     </nav>
+    <main>
+        <img src="IMG/Banner Darth Vader.jpg" alt="Darth Vader" class="Banner-Darth-Vader">
+
+    </main>
+    <footer>
+
+    </footer>
 
 </body>
 
