--- a/SimaStarWars.html
+++ b/SimaStarWars.html
@@ -35,10 +35,119 @@
             <li>Belleza</li>
         </ul>
     </nav>
-    <main>
-        <img src="IMG/Banner Darth Vader.jpg" alt="Darth Vader" class="Banner-Darth-Vader">
+    <section class="banner">
+        <img src="IMG/Banner Darth Vader.png" alt="Darth Vader" class="banner">
+        <img src="IMG/LOGO-SIMAN.png" alt="Logo-siman" class="logo-sobre-banner">
+        <div class="Texto-sobre-banner">STAR WARS DEALS!</div>
+        <button class="boton-comprar">REBAJAS</button>
+    </section>
+
+    <div class="contenido-principal">
+        <aside class="menu-filtros">
+            <h2>Filtros</h2>
+
+            <div class="filtros"></div>
+            <label><input type="checkbox" name="categoria" value="ropa"> Ropa</label><br>
+            <label><input type="checkbox" name="categoria" value="zapatos"> Zapatos</label><br>
+            <label><input type="checkbox" name="categoria" value="electrodomesticos"> Electrodomésticos</label>
+    
+
+    <div class="filtros">
+        <h3>Precio</h3>
+        <label><input type="radio" name="precio" value="0-25"> $0 - $25</label><br>
+        <label><input type="radio" name="precio" value="26-50"> $26 - $50</label><br>
+        <label><input type="radio" name="precio" value="51-200"> $51 - $200</label>
+    </div>
+
+    <button class="btn-aplicar">Aplicar Filtros</button>
+
+    </aside>
+
+    <main class="Productos">
+        <div class="Item">
+            <div class="img-container">
+                <img src="IMG/Razor Crest.webp" alt="Lego Razor Crest" class="img-principal">
+                <img src="IMG/razor crest 2.webp" alt="Lego Razor Crest Alternative" class="img-hover">
+            </div>
+            <h4>Set Lego Razor Crest Star Wars</h4>
+            <p>$35</p>
+        </div>
+        <div class="Item">
+            <div class="img-container">
+                <img src="IMG/Star Wars Shirt.avif" alt="Camisa Star Wars" class="img-principal">
+                <img src="IMG/Star Wars Shirt 2.avif" alt="Camisa Alternative" class="img-hover">
+            </div>
+            <h4>Camisa Star Wars</h4>
+            <p>$25</p>
+        </div>
+        <div class="Item">
+            <div class="img-container">
+                <img src="IMG/Crocs.avif" alt="Crocs Star Wars" class="img-principal">
+                <img src="IMG/Crocs 2.avif" alt="Crocs Alternative" class="img-hover">
+            </div>
+            <h4>Crocs Grogu Star Wars</h4>
+            <p>$80</p>
+        </div>
+        <div class="Item">
+            <div class="img-container">
+                <img src="IMG/Cap.avif" alt="Cap Star Wars" class="img-principal">
+                <img src="IMG/Cap 2.avif" alt="Cap Alternative" class="img-hover">
+            </div>
+            <h4>Crocs Grogu Star Wars</h4>
+            <p>$20</p>
+        </div>
+        <div class="Item">
+            <div class="img-container">
+                <img src="IMG/Shoes.avif" alt="Shoes Star Wars" class="img-principal">
+                <img src="IMG/Shoes 2.avif" alt="Shoes Alternative" class="img-hover">
+            </div>
+            <h4>Zapatos Star Wars</h4>
+            <p>$95</p>
+        </div>
+        <div class="Item">
+            <div class="img-container">
+                <img src="IMG/Water Bottle.webp" alt="Bottle Star Wars" class="img-principal">
+                <img src="IMG/Water bottle 2.webp" alt="Bottle Alternative" class="img-hover">
+            </div>
+            <h4>Botella para Agua Light Saber</h4>
+            <p>$35</p>
+        </div>
+        <div class="Item">
+            <div class="img-container">
+                <img src="IMG/Light Saber.webp" alt="Light Saber Star Wars" class="img-principal">
+                <img src="IMG/Light saber 2.webp" alt="Light Saber Alternative" class="img-hover">
+            </div>
+            <h4>Light Saber Obi-Wan Kenobi</h4>
+            <p>$34.99</p>
+        </div>
+        <div class="Item">
+            <div class="img-container">
+                <img src="IMG/Sweater.webp" alt="Sweater Star Wars" class="img-principal">
+                <img src="IMG/Sweater 2.jpg" alt="Sweater Alternative" class="img-hover">
+            </div>
+            <h4>Star Wars Sweater</h4>
+            <p>$44.99</p>
+        </div>
+        <div class="Item">
+            <div class="img-container">
+                <img src="IMG/C3PO Lego.avif" alt="C3PO Lego Star Wars" class="img-principal">
+                <img src="IMG/C3PO Lego 2.avif" alt="C3PO Lego Alternative" class="img-hover">
+            </div>
+            <h4>C3P0 Lego Set</h4>
+            <p>$64.99</p>
+        </div>
+        <div class="Item">
+            <div class="img-container">
+                <img src="IMG/Grogu Bath.jpg" alt="Grogu Bath Star Wars" class="img-principal">
+                <img src="IMG/Grogu Bath 2.jpg" alt="Grogu Bath Alternative" class="img-hover">
+            </div>
+            <h4>Grogu Gel de baño</h4>
+            <p>$17.99</p>
+        </div>
 
     </main>
+    </div>
+
     <footer>
 
     </footer>
