Footer-Rebajas-Pagina2

--- a/SimaStarWars.html
+++ b/SimaStarWars.html
@@ -39,7 +39,7 @@
         <img src="IMG/Banner Darth Vader.png" alt="Darth Vader" class="banner">
         <img src="IMG/LOGO-SIMAN.png" alt="Logo-siman" class="logo-sobre-banner">
         <div class="Texto-sobre-banner">STAR WARS DEALS!</div>
-        <button class="boton-comprar">REBAJAS</button>
+        <a href="Rebajas.html" class="boton-comprar">REBAJAS</a>
     </section>
 
     <div class="contenido-principal">
@@ -148,8 +148,19 @@
     </main>
     </div>
 
-    <footer>
+    <footer class="footer">
+<div class="footer-container">
+    <div class ="footer-left">
+        <img src="IMG/LOGO-SIMAN.png" alt="Logo Siman" class="Logo-footer">
+        <p>Suscríbete para obtener las mejores ofertas</p>
+        <form class="subscribe-form">
+            <input type="email" placeholder="e-mail">
+            <button type="submit">Suscribirme</button>
+        </form>
+        <p class="Phone">📞 2298-3777</p>
+    </div>
 
+</div>
     </footer>
 
 </body>
