--- a/SimaStarWars.html
+++ b/SimaStarWars.html
@@ -93,7 +93,7 @@
                     <img src="IMG/Cap.avif" alt="Cap Star Wars" class="img-principal">
                     <img src="IMG/Cap 2.avif" alt="Cap Alternative" class="img-hover">
                 </div>
-                <h4>Crocs Grogu Star Wars</h4>
+                <h4>Gorra Star Wars</h4>
                 <p>$20</p>
             </div>
             <div class="Item">
